Thu May 13 13:10:35 2004  Jaiganesh B  <jai@dre.vanderbilt.edu>

        * DnC/Config_Handlers/Domain_Handler.cpp:
        * DnC/Config_Handlers/Domain_Handler.h:

          Updated Domain_Handler to handle property and
          satisfier property elements.

Wed May 12 20:05:55 2004  Ossama Othman  <ossama@dre.vanderbilt.edu>

	* examples/handcrafted/BasicSP_EC/EC/client.cpp:

	  Corrected case of header file in #include directive.
	  "ace/Streams.h" -> "ace/streams.h".  Blame it on MS Windows case
	  insenstivity.  :-)

Wed May 12 15:52:29 2004  Arvind S. Krishna  <arvindk@dre.vanderbilt.edu>

        * DnC/Config_Handlers/Utils.h:
        * DnC/Config_Handlers/Utils.cpp:

          Added two utility methods create_document () and parse_href_tag
          () that will allow creation of an iterator pointing to top of
          the document as specified in the <href = "..."> tag. Now all
          handlers that need to handle <href> definitions can make use of
          this utility.

Wed May 12 15:08:14 2004  Jeff Parsons <j.parsons@vanderbilt.edu>

        * examples/Hello/Hello_Base/Hello_Base.mpc:

          Copied export macro settings from stub project to servant
          project. The servant project had only one export macro
          defined for both *C.h and *S.h files, and so was
          clobbering the stub export macro already generated.

Wed May 12 14:25:00 2004  Jaiganesh B  <jai@dre.vanderbilt.edu>

        * DnC/Config_Handlers/Domain_Handler.cpp:
        * DnC/Config_Handlers/Domain_Handler.h:

          Added some more general functions.

Wed May 12 13:51:37 2004  Jaiganesh B  <jai@dre.vanderbilt.edu>

        * DnC/Config_Handlers/Domain_Handler.cpp:
        * DnC/Config_Handlers/Domain_Handler.h:

          Added some general functions which other handlers could
          use.

Wed May 12 12:59:21 2004  Jaiganesh B  <jai@dre.vanderbilt.edu>

        * DnC/Config_Handlers/Domain_Handler.cpp:
        * DnC/Config_Handlers/Domain_Handler.h:
